force-app/main/default/objects/Bulk_Data_Processing__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bulk Data Processing</relationshipLabel>
        <relationshipName>Bulk_Data_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Job_ID__c</fullName>
        <label>Bulk Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipName>Offer_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Central_Admin_Notes__c</fullName>
        <label>Central Admin Notes</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <inlineHelpText>Applicant&apos;s citizenship</inlineHelpText>
        <label>Citizenship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Duration_Unit__c</fullName>
        <label>Credit Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Semesters</fullName>
                </value>
                <value>
                    <fullName>Trimesters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Duration_Value__c</fullName>
        <description>What is the new course duration after the Credit/RPL assessment?</description>
        <inlineHelpText>What is the new course duration after the Credit/RPL assessment?</inlineHelpText>
        <label>Credit Duration Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Duration__c</fullName>
        <label>Credit Duration</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Points__c</fullName>
        <description>How much credit points have been approved and should be removed from the offer?</description>
        <inlineHelpText>How much credit points have been approved and should be removed from the offer?</inlineHelpText>
        <label>Credit Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Admission_Category__c</fullName>
        <label>Current Admission Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Course_Campus__c</fullName>
        <label>Current Course Campus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Course_Code__c</fullName>
        <label>Current Course Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Course_Specialisation__c</fullName>
        <label>Current Course Specialisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Course_Title__c</fullName>
        <label>Current Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Unit_Set__c</fullName>
        <label>Current Unit Set</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayNewACPCmp__c</fullName>
        <formula>AND(NOT(ISBLANK(Transfer_To_Application__c)), ISBLANK(Transfer_To__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayNewACPCmp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Applicant&apos;s Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <inlineHelpText>Fee category of the applicant&apos;s current course</inlineHelpText>
        <label>Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fetch_Course_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fetch Course Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manual_ISCA_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if offer will require a manual edit of the ISCA document.</description>
        <inlineHelpText>Indicate if offer will require a manual edit of the ISCA document.</inlineHelpText>
        <label>Manual Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Condition__c</fullName>
        <label>Offer Condition</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Lapsed_Date__c</fullName>
        <label>Offer Lapsed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Response_Status__c</fullName>
        <label>Offer Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Template__c</fullName>
        <label>Offer Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_MU_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option if the MU course for the offer doesn&apos;t require deposit and OSHC fee</description>
        <inlineHelpText>Select this option if the MU course for the offer doesn&apos;t require deposit and OSHC fee</inlineHelpText>
        <label>Onshore MU Transfer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Student ID</inlineHelpText>
        <label>Person ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <label>Preference</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Course_Offering__c</fullName>
        <label>Primary Course Offering</label>
        <summaryFilterItems>
            <field>Suggested_Course_Offering__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Suggested_Course_Offering__c.Bulk_Data_Processing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Type__c</fullName>
        <defaultValue>&quot;Wet Signature&quot;</defaultValue>
        <label>Signature Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wet Signature</fullName>
                    <default>true</default>
                    <label>Wet Signature</label>
                </value>
                <value>
                    <fullName>Digital Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the offer request record assessment</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Review Required</fullName>
                </value>
                <value>
                    <fullName>Ready for Offer</fullName>
                </value>
                <value>
                    <fullName>Generate Offer</fullName>
                </value>
                <value>
                    <fullName>Processing Offer</fullName>
                </value>
                <value>
                    <fullName>Offer Error</fullName>
                </value>
                <value>
                    <fullName>Offer Created</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Notes__c</fullName>
        <label>Student Notes</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <description>Template type of the opportunity/offer</description>
        <label>Template Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Admission_Category__c</fullName>
        <label>Transfer Admission Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Calendar__c</fullName>
        <externalId>true</externalId>
        <label>Transfer Calendar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Citizenship_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Citizenship Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Bulk Data Processing</relationshipLabel>
        <relationshipName>Bulk_Data_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Course_Campus__c</fullName>
        <externalId>true</externalId>
        <label>Transfer Course Campus</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Course_Code__c</fullName>
        <externalId>true</externalId>
        <label>Transfer Course Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Course_Specialisation__c</fullName>
        <label>Transfer Course Specialisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Course_Title__c</fullName>
        <label>Transfer Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ACP from where applicant want to transfer</description>
        <inlineHelpText>ACP from where applicant want to transfer</inlineHelpText>
        <label>Transfer From</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Bulk Data Processing (Transfer From)</relationshipLabel>
        <relationshipName>Bulk_Data_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Bulk Data Processing</relationshipLabel>
        <relationshipName>Bulk_Data_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipName>Offer_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Unit_Set__c</fullName>
        <externalId>true</externalId>
        <label>Transfer Unit Set</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Offer request type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Course Transfer</fullName>
                </value>
                <value>
                    <fullName>Campus Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Onshore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the current course based in Australia?</description>
        <inlineHelpText>Is the current course based in Australia?</inlineHelpText>
        <label>is Onshore?</label>
        <type>Checkbox</type>
    </fields>
    <label>Bulk Data Processing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Current_Course_Code__c</columns>
        <columns>Current_Course_Title__c</columns>
        <columns>Current_Unit_Set__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>Transfer_Course_Code__c</columns>
        <columns>Transfer_Course_Title__c</columns>
        <columns>Transfer_Unit_Set__c</columns>
        <columns>Transfer_Course_Campus__c</columns>
        <columns>Log__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Person_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>7/18/2025 12:00 AM</value>
        </filters>
        <label>All BDP Records</label>
    </listViews>
    <listViews>
        <fullName>All_BDP_Records_Ready_for_Offer</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Transfer_From__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>Offer_Lapsed_Date__c</columns>
        <columns>Onshore_MU_Transfer__c</columns>
        <columns>Manual_ISCA_Edit__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Offer</value>
        </filters>
        <filters>
            <field>Transfer_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bulk_Data_Processing__c.CC_Transfer</value>
        </filters>
        <label>All BDP Records Ready for Offer</label>
    </listViews>
    <listViews>
        <fullName>All_BDP_Records_Requiring_Review</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Current_Course_Code__c</columns>
        <columns>Current_Course_Title__c</columns>
        <columns>Current_Unit_Set__c</columns>
        <columns>Current_Course_Campus__c</columns>
        <columns>Transfer_Course_Code__c</columns>
        <columns>Transfer_Course_Title__c</columns>
        <columns>Transfer_Unit_Set__c</columns>
        <columns>Transfer_Course_Campus__c</columns>
        <columns>Log__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Review Required</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bulk_Data_Processing__c.CC_Transfer</value>
        </filters>
        <label>All BDP Records Requiring Review</label>
    </listViews>
    <listViews>
        <fullName>All_BDP_Records_in_Bulk_Offer_Generation</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Transfer_From__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>Onshore_MU_Transfer__c</columns>
        <columns>Manual_ISCA_Edit__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Generate Offer,Processing Offer</value>
        </filters>
        <filters>
            <field>Transfer_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bulk_Data_Processing__c.CC_Transfer</value>
        </filters>
        <label>All BDP Records in Bulk Offer Generation</label>
    </listViews>
    <listViews>
        <fullName>All_BDP_Records_with_Completed_Offers</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Transfer_From__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Transfer_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bulk_Data_Processing__c.CC_Transfer</value>
        </filters>
        <label>All BDP Records with Completed Offers</label>
    </listViews>
    <listViews>
        <fullName>All_BDP_Records_with_Offer_Errors</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Transfer_From__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>Log__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Offer Error</value>
        </filters>
        <filters>
            <field>Transfer_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bulk_Data_Processing__c.CC_Transfer</value>
        </filters>
        <label>All BDP Records with Offer Errors</label>
    </listViews>
    <listViews>
        <fullName>All_BDP_Records_with_Offers_Generated</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Transfer_From__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>Onshore_MU_Transfer__c</columns>
        <columns>Manual_ISCA_Edit__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Offer Created</value>
        </filters>
        <filters>
            <field>Transfer_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bulk_Data_Processing__c.CC_Transfer</value>
        </filters>
        <label>All BDP Records with Offers Generated</label>
    </listViews>
    <listViews>
        <fullName>My_Transfers</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Current_Course_Code__c</columns>
        <columns>Current_Course_Title__c</columns>
        <columns>Current_Unit_Set__c</columns>
        <columns>Current_Course_Campus__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>Transfer_Course_Code__c</columns>
        <columns>Transfer_Course_Title__c</columns>
        <columns>Transfer_Unit_Set__c</columns>
        <columns>Transfer_Course_Campus__c</columns>
        <columns>Manual_ISCA_Edit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bulk_Data_Processing__c.CC_Transfer</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/31/2025 12:00 AM</value>
        </filters>
        <label>My BDP Records</label>
    </listViews>
    <nameField>
        <displayFormat>BDP-{0000000}</displayFormat>
        <label>Transfer Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Data Processing</pluralLabel>
    <recordTypes>
        <fullName>CC_Transfer</fullName>
        <active>true</active>
        <description>Used to create offer request records specific to course and campus transfers</description>
        <label>Course &amp; Campus Transfer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Transfer_Is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordType.DeveloperName = &quot;CC_Transfer&quot;,
 NOT(ISCHANGED(isLocked__c)),
 OR(
    AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Processing Offer&quot;), ISCHANGED( Status__c )),
    AND(ISPICKVAL(Status__c,&quot;Processing Offer&quot;),
     OR(
        ISCHANGED( Transfer_Calendar__c ),
        ISCHANGED( Transfer_Course_Campus__c ) ,
        ISCHANGED( Transfer_Course_Code__c ),
        ISCHANGED( Transfer_Course_Specialisation__c ),
        ISCHANGED( Transfer_Course_Title__c ),
        ISCHANGED( Transfer_To__c ),
        ISCHANGED( Credit_Duration__c ),
        ISCHANGED( Credit_Duration_Unit__c ),
        ISCHANGED( Credit_Points__c ),
        ISCHANGED( Person_ID__c ),
        ISCHANGED( Applicant__c )
       )
    )
    
  )
)</errorConditionFormula>
        <errorMessage>Can&apos;t update transfer record at this stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_ready_for_offer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Transfer_To__c),
OR( ISPICKVAL(Status__c, &quot;Ready for Offer&quot;), ISPICKVAL(Status__c, &quot;Generate Offer&quot;) ),
 RecordType.DeveloperName = &quot;CC_Transfer&quot;
 
)</errorConditionFormula>
        <errorMessage>Transfer To is mandatory in order to
make an offer.</errorMessage>
    </validationRules>
</CustomObject>